[package]
name = "urocket-http-stage"
author= "Daniele Cruciani <daniele@smartango.com>"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.27"
serde_json = "1.0.108"
tokio = { version = "1.23.0", features = ["macros", "time", "rt-multi-thread", "process", "net", "fs", "io-util"]}
tokio-stream = "0.1.14"
clap = { version = "4.4.7", features = ["derive", "string"] }
axum = { version = "0.6.20"}
hyperlocal = "0.8"

toktor = { path = "toktor" }
