[package]
name = "urocket-http-stage"
author= "Daniele Cruciani <daniele@smartango.com>"
version = "0.1.0"
edition = "2021"
default-run = "main"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.27"
serde_json = "1.0.108"
tokio = { version = "1.23.0", features = ["macros", "time", "rt-multi-thread", "process", "net", "fs", "io-util"]}
tokio-stream = "0.1.14"
clap = { version = "4.4.7", features = ["derive", "string"] }
hyper = {version ="1.0", features = ["full", "server"] }
hyper-util = { version="0.1.1", features= ["full"] }
http-body-util = "0.1"
bytes = "1.5"
uuid = { version = "1.6.1", features = ["v4"]}
wait4 = "0.1.3"
libc = "0.2.152"

toktor = { path = "toktor" }
