[package]
name = "urocket-http-stage"
author= "Daniele Cruciani <daniele@smartango.com>"
version = "0.1.0"
edition = "2021"
default-run = "main"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "time", "rt-multi-thread", "process", "net", "fs", "io-util"]}
tokio-stream = "0.1.14"
clap = { version = "4.5.2", features = ["derive", "string"] }
hyper = {version ="1.2.0", features = ["full", "server"] }
hyper-util = { version="0.1.3", features= ["full"] }
http-body-util = "0.1"
bytes = "1.5"
uuid = { version ="1.7.0", features = ["v4"]}
wait4 = "0.1.3"
libc = "0.2.153"
text_placeholder = "0.5.0"

toktor = { path = "toktor" }
tracing = {version = "0.1.40", features = ["async-await"]}
tracing-subscriber = "0.3.18"
